<resources>
    <string name="app_name">BookMatch</string>


    <!-- Start MainActivity -->
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="reviews">Reviews</string>
    <string name="collections">Collections</string>
    <string name="account">Account</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_content_description">Default content description</string>
    <string name="book_thumbnail">Book Thumbnail</string>
    <string name="book_title_default">Book Title Default</string>
    <string name="default_book_plot">Default Book Plot</string>
    <string name="default_book_author">Default Book Author</string>
    <string name="genre_book_default">Genre Book Default</string>
    <string name="publication_year_default">Publication Year Default</string>
    <string name="clicked_on">"Clicked on: "</string>
    <string name="added">Added</string>
    <string name="no_book_selected">No book selected</string>
    <!-- End MainActivity -->

    <!-- Start WelcomeActivity -->
    <string name="email_welcome" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="new_to_bookmatch">Are you new to BookMatch?</string>
    <string name="register">Register</string>
    <string name="logo_application">Logo Application</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="registration">Registration</string>
    <string name="error_email">Insert a valid email address</string>
    <string name="error_password">The password must be at least 8 characters long</string>
    <string name="quit">Are you sure you want to quit?</string>
    <string name="quit_title">Exit the App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_empty_fields">Fields cannot be empty</string>
    <string name="error_match_password">Passwords don\'t match</string>
    <!-- End WelcomeActivity -->

    <!-- Start ExploreFragment -->
    <string name="book_cover_not_available">Book cover not available</string>
    <string name="book_details_not_available">Book details not available</string>
    <string name="no_author_found">No author found</string>
    <string name="book_saved">Book saved!</string>
    <string name="book_skipped">Book skipped!</string>
    <string name="book_deleted">Book deleted!</string>
    <string-array name="search_genre">
        <item>Art</item>
        <item>Architecture</item>
        <item>Biography</item>
        <item>Computers</item>
        <item>Cooking</item>
        <item>Design</item>
        <item>Drama</item>
        <item>Education</item>
        <item>Fiction</item>
        <item>Games</item>
        <item>History</item>
        <item>Juvenile fiction</item>
        <item>Law</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Nature</item>
        <item>Pets</item>
        <item>Philosophy</item>
        <item>Religion</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Travel</item>
    </string-array>
    <string name="genre">Genre</string>
    <string name="explore_placeholder">Select a genre to start searching!</string>
    <string name="finished_book_list">No more books of this genre, try something else!</string>
    <!-- End ExploreFragment -->

    <!-- Start SavedFragment -->
    <string name="default_title">Default title</string>
    <string name="default_author">Author not found</string>
    <string name="by">By:</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="remove_from_saved_book">Remove from saved book</string>
    <!-- End SavedFragment -->

    <!-- Start AccountFragment -->
    <string name="default_nickname">default nickname</string>
    <string name="full_name_account">Full Name:</string>
    <string name="email_account">Email:</string>
    <string name="default_full_name">Default full name</string>
    <string name="default_email">Default email</string>
    <string name="statistics">Statistics</string>
    <string name="saved_books">Saved books</string>
    <string name="reviewed_books">Reviewed Books</string>
    <string name="default_saved_books">default saved books</string>
    <string name="default_books_read">default books read</string>
    <string name="default_favorite_genre">Favorite genre not yet specified</string>
    <string name="default_collection_created">default collection created</string>
    <string name="default_favorite_book">Favorite book not yet specified</string>
    <string name="preferences">Preferences</string>
    <string name="default_favorite_author">Favorite author not yet specified</string>
    <string name="collection_created">Collection created</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="undo">Undo</string>
    <string name="preferences_fetch_error">Error while fetching preferences</string>
    <!-- End AccountFragment -->

    <!-- Start AccountEditFragment -->
    <string name="please_add_some_books_to_your_saved_list">Please, add some books to your saved list</string>
    <string name="profile_information_saved">Profile information Saved!</string>
    <string name="preferences_saved">Preferences Saved!</string>
    <string name="preferences_not_saved">Couldn\'t save preferences!</string>
    <string name="please_make_some_changes_to_save_preferences">Please, make some changes to save preferences</string>
    <string name="genre_cannot_be_empty">Genre cannot be empty</string>
    <string name="author_cannot_be_empty">Author cannot be empty</string>
    <string name="book_cannot_be_empty">Book cannot be empty</string>
    <string name="hint_nickname">Nickname</string>
    <string name="full_name_hint">Full name</string>
    <string name="edit_account">Edit account</string>
    <string name="save_changes">Save changes</string>
    <string name="error_nickname_required">Nickname is required</string>
    <string name="error_full_name_required">Full name is required</string>
    <string name="save">Save</string>
    <string name="description_edit_account">Edit your account information by entering your nickname, first name, last name and a profile picture!</string>
    <!-- End AccountEditFragment -->

    <!-- Start PreferencesEditFragment -->
    <string name="edit_preferences">Edit preferences</string>
    <string name="book">Book</string>
    <string name="author">Author</string>
    <string name="description_edit_preferences">Edit your profile preferences by selecting your favorite genre, author, and book!</string>

    <string-array name="search_author">
    </string-array>

    <string-array name="search_book">
    </string-array>
    <!-- End PreferencesEditFragment -->

    <!-- Start CollectionsFragment -->
    <string name="create_button">Create</string>
    <string name="create_a_new_collection">Create a New Collection</string>
    <string name="description_create_collection">Enter an image, name and a short description for your collection!</string>
    <string name="collection_name">Name</string>
    <string name="collection_description">Description</string>
    <string name="collection_created_toast">Collection Created</string>
    <string name="error_collection_name_required">Collection name is required</string>
    <string name="error_collection_description_required">Collection description is required</string>
    <string name="name_collection_default">Name Collection Default</string>
    <string name="description_collection_default">Description Collection Default</string>
    <string name="empty_collection">This collection is empty! To add book, tap here!</string>
    <string name="add_book_to_collection">Add Book to Collection</string>
    <string name="add_books_button">Add Books</string>
    <string name="delete_collection">Delete collection</string>
    <string name="collection_image">Collection image</string>
    <string name="edit">Edit</string>
    <string name="edit_collection">Edit collection</string>
    <string name="error_no_changes">Error: no changes detected</string>
    <string name="error_collection_name_exists">Error: collection with same name already exists</string>
    <string name="collection_updated">Collection updated!</string>
    <!-- End CollectionsFragment -->

    <!-- Start BookPageFragment -->
    <string name="book_title_not_found">Book title not found</string>
    <string name="author_not_found">Author not found</string>
    <string name="plot_not_found">Plot not found</string>
    <string name="publication_year_not_found">Publication year not found</string>
    <!-- End BookPageFragment -->

    <!-- Start OnBoard Activity -->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="get_started">Get Started!</string>

    <string-array name="onboard_string_array" >
        <item>@string/intro_first</item>
        <item>@string/intro_second</item>
        <item>@string/intro_third</item>
        <item>@string/intro_fourth</item>
    </string-array>

    <string-array name="onboard_desc_array" >
        <item>@string/desc_first</item>
        <item>@string/desc_second</item>
        <item>@string/desc_third</item>
        <item>@string/desc_fourth</item>
    </string-array>

    <string name="intro_second">Create Collections!</string>
    <string name="intro_first">Let\'s Explore!</string>
    <string name="intro_third">Add Reviews!</string>
    <string name="intro_fourth">Custom your Profile!</string>
    <string name="desc_second">Create collections with your favorite book or your future reads!</string>
    <string name="desc_first">Discover the books that inspire you most!</string>
    <string name="desc_third">Add reviews and ratings to your favorite books!</string>
    <string name="desc_fourth">Enrich your profile with your beloved books, treasured authors, and favored genres!</string>
    <!-- End OnBoard Activity -->

    <!-- Start ReviewFragment -->
    <string name="default_review">This book does not have a review. Try adding one!</string>
    <string name="insert_a_review">Insert a review</string>
    <string name="default_rating" translatable="false">0.0</string>
    <string name="favorite">Favorite</string>
    <string name="removed_from_reviews">" removed from reviews!"</string>
    <string name="review_saved">The review has been saved!</string>
    <string name="error_not_saved">"couldn't save changes "</string>
    <string name="no_google_account_found">No google account found</string>
    <string name="requestPermissionNotification">Enable notifications?</string>
    <string name="no_notification_displayed">notifications will not be shown</string>
    <!-- End ReviewFragment -->

</resources>