<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/saved" />

    <item
        android:id="@+id/navigation_reviews"
        android:icon="@drawable/baseline_checklist_rtl_24"
        android:title="@string/reviews" />

    <item
        android:id="@+id/navigation_collections"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/collections" />


    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account" />


</menu>