<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">



    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.bookmatch.ui.main.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.bookmatch.ui.main.saved.SavedFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.example.bookmatch.ui.main.collections.CollectionsFragment"
        android:label="@string/collections"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bookmatch.ui.main.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bookmatch.ui.main.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_accountEditFragment"
            app:destination="@id/accountEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountEditFragment"
        android:name="com.example.bookmatch.ui.main.account.AccountEditFragment"
        android:label="AccountEditFragment" />

</navigation>