<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeable_card"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="?attr/colorSecondaryContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/book_thumbnail"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#70000000"
            android:padding="16dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_title"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_author"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

